# resume_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Makefile.ps1  PRD.md  README.md  docker-compose.production.yml  docker-compose.yml  install.ps1  install.sh  resume-agent-workbench.html  resume-agent-需求说明.html
backend/: README.md  pyproject.toml
backend/src/resume_agent/: __init__.py  config.py  main.py
backend/src/resume_agent/agents/: __init__.py
backend/src/resume_agent/api/: __init__.py  completeness.py  export.py  gap.py  gap_report.py  generate.py  health.py  jd.py  knowledge.py  personal_info.py  response.py  resumes.py  router.py  section_order.py  suggest.py  templates.py  tree.py  upstream.py
backend/src/resume_agent/db/: __init__.py  connection.py  init_db.py  schema.sql
backend/src/resume_agent/export/: pdf_builder.py  templates.py
backend/src/resume_agent/llm/: __init__.py  client.py
backend/src/resume_agent/parsers/: __init__.py  docx_parser.py  extractor.py  mineru_client.py  pdf_parser.py
backend/src/resume_agent/rag/: __init__.py  chroma_client.py  embeddings.py
backend/src/resume_agent/services/: __init__.py  tree_builder.py
backend/tests/: conftest.py  test_api.py  test_completeness_api.py  test_db.py  test_export_api.py  test_extractor.py  test_frontend_base_path.py  test_gap_report_api.py  test_generate_full_api.py  test_import.py  test_jd_api.py  test_lifeos_integration.py  test_llm_client.py  test_parsers.py  test_section_order_api.py  test_suggest_api.py  test_template_config.py  test_templates_api.py  test_tree_builder.py  test_upstream_api.py
deploy/: resume-agent.env.example
docs/: lifeos-integration.md
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
openspec/: config.yaml
resume-agent-workspace/: colors_and_type.css  orchestration-summary.json  resume-agent-workspace.design
resume-agent-workspace/pages/: job-analysis.html  (+5 more)
scripts/: import_career_ops.py
(+63 files in other folders)
