[project]
name = "resume-agent"
version = "0.1.0"
description = "Resume-Agent MVP backend: FastAPI + SQLite + Chroma."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Resume-Agent" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.20",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openai>=1.50.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/resume_agent/db/schema.sql" = "resume_agent/db/schema.sql"

[tool.hatch.build.targets.sdist]
include = ["src/resume_agent"]

# === Ruff 配置 ===
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (由 formatter 管)
    "B008", # Do not perform function call in argument defaults (FastAPI Depends 习惯)
]

[tool.ruff.lint.isort]
known-first-party = ["resume_agent"]

[tool.ruff.format]
docstring-code-format = true

# === Pytest 配置 ===
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src"]

# === Mypy 配置 ===
[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["resume_agent"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
